Removed guava dependency