@@ -1,14 +1,13 @@
 package seatsio.events;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 import seatsio.holdTokens.HoldToken;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-import static com.google.common.collect.Lists.newArrayList;
-import static com.google.common.collect.Sets.newHashSet;
 import static org.assertj.core.api.Assertions.assertThat;
 import static seatsio.events.EventObjectInfo.HELD;
 
@@ -20,7 +19,7 @@ public class HoldObjectsTest extends SeatsioClientTest {
         Event event = client.events.create(chartKey);
         HoldToken holdToken = client.holdTokens.create();
 
-        client.events.hold(event.key, newArrayList("A-1", "A-2"), holdToken.holdToken);
+        client.events.hold(event.key, List.of("A-1", "A-2"), holdToken.holdToken);
 
         EventObjectInfo status1 = client.events.retrieveObjectInfo(event.key, "A-1");
         assertThat(status1.status).isEqualTo(HELD);
@@ -37,7 +36,7 @@ public class HoldObjectsTest extends SeatsioClientTest {
         Event event = client.events.create(chartKey);
         HoldToken holdToken = client.holdTokens.create();
 
-        client.events.hold(event.key, newArrayList("A-1", "A-2"), holdToken.holdToken, "order1", null, null, null);
+        client.events.hold(event.key, List.of("A-1", "A-2"), holdToken.holdToken, "order1", null, null, null);
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").orderId).isEqualTo("order1");
         assertThat(client.events.retrieveObjectInfo(event.key, "A-2").orderId).isEqualTo("order1");
@@ -48,11 +47,11 @@ public class HoldObjectsTest extends SeatsioClientTest {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
         HoldToken holdToken = client.holdTokens.create();
-        client.events.updateExtraData(event.key, "A-1", ImmutableMap.of("foo", "bar"));
+        client.events.updateExtraData(event.key, "A-1", Map.of("foo", "bar"));
 
-        client.events.hold(event.key, newArrayList("A-1"), holdToken.holdToken, null, true, null, null);
+        client.events.hold(event.key, List.of("A-1"), holdToken.holdToken, null, true, null, null);
 
-        assertThat(client.events.retrieveObjectInfo(event.key, "A-1").extraData).isEqualTo(ImmutableMap.of("foo", "bar"));
+        assertThat(client.events.retrieveObjectInfo(event.key, "A-1").extraData).isEqualTo(Map.of("foo", "bar"));
     }
 
     @Test
@@ -61,7 +60,7 @@ public class HoldObjectsTest extends SeatsioClientTest {
         Event event = client.events.create(chartKey);
         HoldToken holdToken = client.holdTokens.create();
 
-        ChangeObjectStatusResult result = client.events.hold(event.key, newArrayList("A-1", "A-2"), holdToken.holdToken);
+        ChangeObjectStatusResult result = client.events.hold(event.key, List.of("A-1", "A-2"), holdToken.holdToken);
 
         assertThat(result.objects).containsOnlyKeys("A-1", "A-2");
     }
@@ -70,11 +69,11 @@ public class HoldObjectsTest extends SeatsioClientTest {
     public void channelKeys() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey, new CreateEventParams().withChannels(List.of(
-                new Channel("channelKey1", "channel 1", "#FFFF99", 1, newHashSet("A-1", "A-2"))
+                new Channel("channelKey1", "channel 1", "#FFFF99", 1, Set.of("A-1", "A-2"))
         )));
         HoldToken holdToken = client.holdTokens.create();
 
-        client.events.hold(event.key, newArrayList("A-1"), holdToken.holdToken, null, true, null, newHashSet("channelKey1"));
+        client.events.hold(event.key, List.of("A-1"), holdToken.holdToken, null, true, null, Set.of("channelKey1"));
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").status).isEqualTo(HELD);
     }
@@ -83,11 +82,11 @@ public class HoldObjectsTest extends SeatsioClientTest {
     public void ignoreChannels() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey, new CreateEventParams().withChannels(List.of(
-                new Channel("channelKey1", "channel 1", "#FFFF99", 1, newHashSet("A-1", "A-2"))
+                new Channel("channelKey1", "channel 1", "#FFFF99", 1, Set.of("A-1", "A-2"))
         )));
         HoldToken holdToken = client.holdTokens.create();
 
-        client.events.hold(event.key, newArrayList("A-1"), holdToken.holdToken, null, null, true, null);
+        client.events.hold(event.key, List.of("A-1"), holdToken.holdToken, null, null, true, null);
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").status).isEqualTo(HELD);
     }
