@@ -1,12 +1,11 @@
 package seatsio.events;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 
+import java.util.List;
 import java.util.Map;
 
-import static com.google.common.collect.Lists.newArrayList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class MarkObjectsAsNotForSaleTest extends SeatsioClientTest{
@@ -16,12 +15,12 @@ public class MarkObjectsAsNotForSaleTest extends SeatsioClientTest{
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
 
-        client.events.markAsNotForSale(event.key, newArrayList("o1", "o2"), ImmutableMap.of("GA1", 3), newArrayList("cat1", "cat2"));
+        client.events.markAsNotForSale(event.key, List.of("o1", "o2"), Map.of("GA1", 3), List.of("cat1", "cat2"));
 
         Event retrievedEvent = client.events.retrieve(event.key);
         assertThat(retrievedEvent.forSaleConfig.forSale).isFalse();
         assertThat(retrievedEvent.forSaleConfig.objects).containsExactly("o1", "o2");
-        assertThat(retrievedEvent.forSaleConfig.areaPlaces).isEqualTo(ImmutableMap.of("GA1", 3));
+        assertThat(retrievedEvent.forSaleConfig.areaPlaces).isEqualTo(Map.of("GA1", 3));
         assertThat(retrievedEvent.forSaleConfig.categories).containsExactly("cat1", "cat2");
     }
 
@@ -30,7 +29,7 @@ public class MarkObjectsAsNotForSaleTest extends SeatsioClientTest{
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
 
-        client.events.markAsNotForSale(event.key, newArrayList("o1", "o2"), null, null);
+        client.events.markAsNotForSale(event.key, List.of("o1", "o2"), null, null);
 
         Event retrievedEvent = client.events.retrieve(event.key);
         assertThat(retrievedEvent.forSaleConfig.forSale).isFalse();
@@ -44,12 +43,12 @@ public class MarkObjectsAsNotForSaleTest extends SeatsioClientTest{
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
 
-        client.events.markAsNotForSale(event.key, null, ImmutableMap.of("GA1", 3), null);
+        client.events.markAsNotForSale(event.key, null, Map.of("GA1", 3), null);
 
         Event retrievedEvent = client.events.retrieve(event.key);
         assertThat(retrievedEvent.forSaleConfig.forSale).isFalse();
         assertThat(retrievedEvent.forSaleConfig.objects).isEmpty();
-        assertThat(retrievedEvent.forSaleConfig.areaPlaces).isEqualTo(ImmutableMap.of("GA1", 3));
+        assertThat(retrievedEvent.forSaleConfig.areaPlaces).isEqualTo(Map.of("GA1", 3));
         assertThat(retrievedEvent.forSaleConfig.categories).isEmpty();
     }
 
@@ -58,7 +57,7 @@ public class MarkObjectsAsNotForSaleTest extends SeatsioClientTest{
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
 
-        client.events.markAsNotForSale(event.key, null, null, newArrayList("cat1", "cat2"));
+        client.events.markAsNotForSale(event.key, null, null, List.of("cat1", "cat2"));
 
         Event retrievedEvent = client.events.retrieve(event.key);
         assertThat(retrievedEvent.forSaleConfig.forSale).isFalse();
