@@ -1,14 +1,13 @@
 package seatsio.events;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 import seatsio.holdTokens.HoldToken;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-import static com.google.common.collect.Lists.newArrayList;
-import static com.google.common.collect.Sets.newHashSet;
 import static org.assertj.core.api.Assertions.assertThat;
 import static seatsio.events.EventObjectInfo.FREE;
 
@@ -18,9 +17,9 @@ public class ReleaseObjectsTest extends SeatsioClientTest {
     public void test() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.book(event.key, newArrayList("A-1", "A-2"));
+        client.events.book(event.key, List.of("A-1", "A-2"));
 
-        ChangeObjectStatusResult result = client.events.release(event.key, newArrayList("A-1", "A-2"));
+        ChangeObjectStatusResult result = client.events.release(event.key, List.of("A-1", "A-2"));
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").status).isEqualTo(FREE);
         assertThat(client.events.retrieveObjectInfo(event.key, "A-2").status).isEqualTo(FREE);
@@ -32,9 +31,9 @@ public class ReleaseObjectsTest extends SeatsioClientTest {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
         HoldToken holdToken = client.holdTokens.create();
-        client.events.hold(event.key, newArrayList("A-1", "A-2"), holdToken.holdToken);
+        client.events.hold(event.key, List.of("A-1", "A-2"), holdToken.holdToken);
 
-        client.events.release(event.key, newArrayList("A-1", "A-2"), holdToken.holdToken);
+        client.events.release(event.key, List.of("A-1", "A-2"), holdToken.holdToken);
 
         EventObjectInfo status1 = client.events.retrieveObjectInfo(event.key, "A-1");
         assertThat(status1.status).isEqualTo(FREE);
@@ -50,7 +49,7 @@ public class ReleaseObjectsTest extends SeatsioClientTest {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
 
-        client.events.release(event.key, newArrayList("A-1", "A-2"), null, "order1", null, null, null);
+        client.events.release(event.key, List.of("A-1", "A-2"), null, "order1", null, null, null);
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").orderId).isEqualTo("order1");
         assertThat(client.events.retrieveObjectInfo(event.key, "A-2").orderId).isEqualTo("order1");
@@ -60,23 +59,23 @@ public class ReleaseObjectsTest extends SeatsioClientTest {
     public void keepExtraData() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.updateExtraData(event.key, "A-1", ImmutableMap.of("foo", "bar"));
+        client.events.updateExtraData(event.key, "A-1", Map.of("foo", "bar"));
 
-        client.events.release(event.key, newArrayList("A-1"), null, null, true, null, null);
+        client.events.release(event.key, List.of("A-1"), null, null, true, null, null);
 
-        assertThat(client.events.retrieveObjectInfo(event.key, "A-1").extraData).isEqualTo(ImmutableMap.of("foo", "bar"));
+        assertThat(client.events.retrieveObjectInfo(event.key, "A-1").extraData).isEqualTo(Map.of("foo", "bar"));
     }
 
     @Test
     public void channelKeys() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey, new CreateEventParams().withChannels(List.of(
-                new Channel("channelKey1", "channel 1", "#FFFF99", 1, newHashSet("A-1", "A-2"))
+                new Channel("channelKey1", "channel 1", "#FFFF99", 1, Set.of("A-1", "A-2"))
         )));
 
-        client.events.book(event.key, newArrayList("A-1"), null, null, true, null, newHashSet("channelKey1"));
+        client.events.book(event.key, List.of("A-1"), null, null, true, null, Set.of("channelKey1"));
 
-        client.events.release(event.key, newArrayList("A-1"), null, null, true, null, newHashSet("channelKey1"));
+        client.events.release(event.key, List.of("A-1"), null, null, true, null, Set.of("channelKey1"));
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").status).isEqualTo(FREE);
     }
@@ -85,11 +84,11 @@ public class ReleaseObjectsTest extends SeatsioClientTest {
     public void ignoreChannels() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey, new CreateEventParams().withChannels(List.of(
-                new Channel("channelKey1", "channel 1", "#FFFF99", 1, newHashSet("A-1", "A-2"))
+                new Channel("channelKey1", "channel 1", "#FFFF99", 1, Set.of("A-1", "A-2"))
         )));
-        client.events.book(event.key, newArrayList("A-1"), null, null, true, true, null);
+        client.events.book(event.key, List.of("A-1"), null, null, true, true, null);
 
-        client.events.release(event.key, newArrayList("A-1"), null, null, null, true, null);
+        client.events.release(event.key, List.of("A-1"), null, null, null, true, null);
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").status).isEqualTo(FREE);
     }
