@@ -1,6 +1,5 @@
 package seatsio.events;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 
@@ -14,10 +13,10 @@ public class UpdateExtraDatasTest extends SeatsioClientTest {
     public void test() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        Map<String, Object> extraData1 = ImmutableMap.of("foo1", "bar1");
-        Map<String, Object> extraData2 = ImmutableMap.of("foo2", "bar2");
+        Map<String, Object> extraData1 = Map.of("foo1", "bar1");
+        Map<String, Object> extraData2 = Map.of("foo2", "bar2");
 
-        client.events.updateExtraDatas(event.key, ImmutableMap.of("A-1", extraData1, "A-2", extraData2));
+        client.events.updateExtraDatas(event.key, Map.of("A-1", extraData1, "A-2", extraData2));
 
         assertThat(client.events.retrieveObjectInfo(event.key, "A-1").extraData).isEqualTo(extraData1);
         assertThat(client.events.retrieveObjectInfo(event.key, "A-2").extraData).isEqualTo(extraData2);
